# sso-tools

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
sso_tools/: __init__.py  azure_sso.py  okta_sso.py  test.html
